--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,21 @@ dmypy.json
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Configurations #
+.idea/
+*.pyc
+~*/
+.vscode/
+
+audio_cache/
+dectalk/
+
+discord.log
+logs/
+data/
+config/options.ini
+config/permissions.ini
+config/aliases.json
+config/whitelist.txt
+config/blacklist.txt
