adding nodejs to travis CI pipeline.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,3 @@
-sudo: required
-language: python
-python: "3.6-dev" # 3.5 development branch
-
-matrix:
-  include:
-    - env: TYPE=docker
-      sudo: required
-    - env: TYPE=build
-      os: linux
-      dist: trusty
-      sudo: required
-
-services:
-  - docker
-
-install:
-  - if [ "$TYPE" = "build" ]; then ./.travis/install.sh; fi;
-  - pip install -U -r requirements.txt
-
-script:
-  - if [ "$TYPE" = "docker" ]; then docker build -t pubg-discord-bot .; docker images -a; fi;
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TYPE" == "docker" ]; then rm /home/travis/.docker/config.json; docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASS"; docker tag pubg-discord-bot megacatstudio/pubg-discord-bot:$TRAVIS_BRANCH; docker push megacatstudio/pubg-discord-bot; fi;
-  - if [ "$TYPE" = "build" ]; then python -m compileall ./pubg-discord-bot; fi;
+language: node_js
+node_js:
+  - "node"
