--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+sudo: false
 language: node_js
 node_js:
-  - "node"
+  - "8"
+  - "9"
+  - "10"
+services:
+  - mongodb
+cache:
+  directories:
+    - node_modules
+script:
+  - npm run build
+  - npm run test
