--- a/app.json
+++ b/app.json
@@ -1,18 +1,13 @@
 {
-  "addons": [
-
-  ],
+  "addons": [],
   "buildpacks": [
     {
-      "url": "heroku/python"
+      "url": "heroku/pubgbot"
     }
   ],
-  "env": {
-  },
-  "formation": {
-  },
+  "env": {},
+  "formation": {},
   "name": "pubg-discord-bot",
-  "scripts": {
-  },
+  "scripts": {},
   "stack": "heroku-18"
 }
