updating welcome success url for heroku.

--- a/app.json
+++ b/app.json
@@ -9,5 +9,6 @@
   "formation": {},
   "name": "pubg-discord-bot",
   "scripts": {},
-  "stack": "heroku-18"
+  "stack": "heroku-18",
+  "success_url": "/welcome"
 }
